# oxide-client

./: README.md
.github/workflows/: test.yaml
src/: i18n.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  i18n.json  tauri.conf.json  user-options-template.ini
src-tauri/src/: http_proxy.rs  main.rs  proxy.rs
