[package]
name = "oxide-client"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
axum = "0.7.5"
bytes = "1.6.0"
crc32fast = "1.4.2"
miniz_oxide = "0.7.2"
regex = "1.10.4"
reqwest = "0.12.4"
rust-ini = "0.21.0"
tauri = { version = "1.4", features = [ "dialog-open", "dialog-message", "shell-open"] }
tokio = { version = "1.38.0", features = ["fs", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
